--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "astro": "astro",
     "build": "astro build",
+    "dev": "astro dev",
     "preview": "astro preview",
-    "astro": "astro"
+    "lint": "eslint . --ext .js,.ts,.astro"
   },
   "dependencies": {
     "astro": "^5.14.5"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "@stylistic/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
+    "astro-eslint-parser": "^1.2.2",
+    "eslint": "^9.37.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1"
   }
 }
