--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.ts,.astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.5.13",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.6",
     "tailwindcss": "^4.1.14"
