--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/netlify": "^6.5.13",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.6",
+    "astro-simpleanalytics-plugin": "^0.3.20",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
